--- a/html_03_uri_erp/dept_main.html
+++ b/html_03_uri_erp/dept_main.html
@@ -26,49 +26,45 @@
     </nav>
     <section class="dept">
       <article class="dept">
-        <!-- div*5>label+input-->
+        <!-- div*5>label+input -->
         <div>
-          <label for="d_code">거래처코드</label
-          ><input
+          <label for="d_code">거래처코드</label>
+          <input
             id="d_code"
             type="text"
             placeholder="거래처코드를 입력하세요"
           />
         </div>
         <div>
-          <label for="d_name">거래처명</label
-          ><input id="d_name" type="text" placeholder="거래처명을 입력하세요" />
+          <label for="d_name">거래처명</label>
+          <input id="d_name" type="text" placeholder="거래처명을 입력하세요" />
         </div>
         <div>
-          <label for="d_tel">대표전화</label
-          ><input id="d_tel" type="text" placeholder="대표전화를 입력하세요" />
+          <label for="d_tel">대표전화</label>
+          <input id="d_tel" type="text" placeholder="대표전화를 입력하세요" />
         </div>
         <div>
-          <label for="d_ceo">대표자명</label
-          ><input id="d_ceo" type="text" placeholder="대표자명을 입력하세요" />
+          <label for="d_ceo">대표자명</label>
+          <input id="d_ceo" type="text" placeholder="대표자명을 입력하세요" />
         </div>
         <div>
-          <label for="d_addr">주소</label
-          ><input id="d_addr" type="text" placeholder="주소를 입력하세요" />
+          <label for="d_addr">주소</label>
+          <input id="d_addr" type="text" placeholder="주소를 입력하세요" />
         </div>
         <div>
-          <label for="d_manager">담당자</label
-          ><input
-            id="d_manager"
-            type="text"
-            placeholder="담당자를 입력하세요"
-          />
+          <label for="d_manager">담당자</label>
+          <input id="d_manager" type="text" placeholder="담당자를 입력하세요" />
         </div>
         <div>
-          <label for="d_man_tel">담당연락처</label
-          ><input
+          <label for="d_man_tel">담당연락처</label>
+          <input
             id="d_man_tel"
             type="text"
             placeholder="담당연락처를 입력하세요"
           />
         </div>
         <div class="button_box">
-          <lable for=""></lable>
+          <label for=""></label>
           <div>
             <button>저장</button>
             <button type="reset">다시작성</button>
