--- a/project/메인화면.html
+++ b/project/메인화면.html
@@ -8,44 +8,68 @@
     <link rel="stylesheet" href="메인화면.css" />
   </head>
   <body>
-    <div id="full">
-      <div id="top">
-        <div><h1>시외버스</h1></div>
-        <section>
-          <article>
-            <div>
-              <a href=""
-                >지역 선택
-                <!-- (출발지, 목적지) -->
-              </a>
-            </div>
-          </article>
-          <article>
-            <div>
-              <a href="">
-                도착지 선택
-                <!-- (도착지만 선택하고 도착지로 가는 모든 버스 조회) -->
-              </a>
-            </div>
-          </article>
-          <article>
-            <div><a href="즐겨찾기2.html">즐겨찾기</a></div>
-          </article>
-          <article>
-            <div><a>4</a></div>
-          </article>
-        </section>
+    <div id="all">
+      <div id="black">
+        <div id="red"></div>
+        <div id="yellow"></div>
+        <div id="green"></div>
       </div>
-      <div class="line"></div>
-      <div class="line"></div>
-      <div id="full-bottom">
+      <div id="full">
+        <div id="top">
+          <div id="title_top">
+            <h1>시외버스</h1>
+            <h1><a href="login.html">로그인</a></h1>
+            <h1><a href="join.html">회원가입</a></h1>
+          </div>
+          <section>
+            <article>
+              <div class="select">
+                <a href=""
+                  >노선 조회
+                  <img src="지도.jpg" width="160px" height="160px" />
+                </a>
+              </div>
+            </article>
+            <article>
+              <div class="select">
+                <a href="">
+                  터미널 위치 조회
+                  <img src="목적지.png" width="160px" height="160px" />
+                </a>
+              </div>
+            </article>
+            <article>
+              <div class="select">
+                <a href="usuallyBus.html"
+                  >즐겨찾기
+                  <img src="즐겨찾기.png" width="160px" height="160px"
+                /></a>
+              </div>
+            </article>
+            <article>
+              <div class="select">
+                <a
+                  href="https://www.usquare.co.kr/kor/usquare/reservation.do?mode=reservationList&srCategoryId1=9"
+                  >예매 사이트 이동<img
+                    src="버스티켓.png"
+                    width="160px"
+                    height="160px"
+                /></a>
+              </div>
+            </article>
+          </section>
+        </div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div id="light"></div>
+        <!-- <div id="full-bottom">
         <input class="arrow" placeholder="출발지" />
         <div>→</div>
         <input class="arrow" placeholder="목적지" />
         <button>조회</button>
+      </div> -->
       </div>
     </div>
-
     <div id="bottom">
       <div id="front"></div>
       <div id="back"></div>
