--- a/html_05_uri_erp/dept_main.html
+++ b/html_05_uri_erp/dept_main.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>우리상사 ERP</title>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="dept.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/dept.css" />
+    <script src="js/dept_main.js"></script>
   </head>
   <body>
     <header class="dept">
@@ -94,9 +95,9 @@
           <div class="button_box">
             <label for=""></label>
             <div>
-              <button>저장</button>
+              <button id="btn_save" type="button">저장</button>
               <button type="reset">다시작성</button>
-              <button>리스트로</button>
+              <button type="button">리스트로</button>
             </div>
           </div>
         </form>
