--- a/project/메인화면.html
+++ b/project/메인화면.html
@@ -32,15 +32,15 @@
             </article>
             <article>
               <div class="select">
-                <a href="">
+                <a href="위치조회.html">
                   터미널 위치 조회
-                  <img src="목적지.png" width="160px" height="160px" />
+                  <img src="터미널위치.png" width="160px" height="160px" />
                 </a>
               </div>
             </article>
             <article>
               <div class="select">
-                <a href="usuallyBus.html"
+                <a href="즐겨찾기.html"
                   >즐겨찾기
                   <img src="즐겨찾기.png" width="160px" height="160px"
                 /></a>
