--- a/project/즐겨찾기.html
+++ b/project/즐겨찾기.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>시외버스 - 즐겨찾기</title>
-    <link rel="stylesheet" href="메인화면.css" />
+    <link rel="stylesheet" href="즐겨찾기.css" />
     <!-- <link rel="stylesheet" href="즐겨찾기.css" /> -->
   </head>
   <body>
