--- a/Team_Project/bus/join.html
+++ b/Team_Project/bus/join.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>시외버스 - 회원가입</title>
     <script src="js/join.js"></script>
     <link rel="stylesheet" href="css/index.css" />
@@ -47,7 +49,7 @@
         <input type="radio" name="gender" />남성
       </div>
       <div class="divideLine"></div>
-      <button id="singUp" class="signUp" disabled="true">가입하기</button>
+      <button type="button" id="signUp" class="signUp" disabled="true">가입하기</button>
     </div>
   </body>
 </html>
