--- a/Team_Project/bus/join.html
+++ b/Team_Project/bus/join.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>시외버스 - 회원가입</title>
-    <script src="js/join.js"></script>
     <link rel="stylesheet" href="css/index.css" />
     <link href="css/join.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Dongle:wght@700&display=swap"
       rel="stylesheet"
     />
+    <script src="js/join_test.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -49,7 +49,9 @@
         <input type="radio" name="gender" />남성
       </div>
       <div class="divideLine"></div>
-      <button type="button" id="signUp" class="signUp" disabled="true">가입하기</button>
+      <button type="button" id="signUp" class="signUp" disabled="true">
+        가입하기
+      </button>
     </div>
   </body>
 </html>
