--- a/Team_Project/bus/join.html
+++ b/Team_Project/bus/join.html
@@ -49,9 +49,7 @@
         <input type="radio" name="gender" />남성
       </div>
       <div class="divideLine"></div>
-      <button type="button" id="signUp" class="signUp" disabled="true">
-        가입하기
-      </button>
+      <button type="button" id="signUp" class="signUp">가입하기</button>
     </div>
   </body>
 </html>
