--- a/Team_Project/bus/join.html
+++ b/Team_Project/bus/join.html
@@ -38,13 +38,13 @@
       />
       <div class="error" id="error_pwd2"></div>
 
-      <select class="area">
-        <option disabled="true" selected="true">지역을 선택하세요</option>
-        <option>서울</option>
-        <option>경기</option>
-        <option>인천</option>
+      <select class="area" id="area">
+        <option value="">지역을 선택하세요</option>
+        <option value="1">서울</option>
+        <option value="2">경기</option>
+        <option value="3">인천</option>
       </select>
-      <div class="gender">
+      <div class="gender" id="gender">
         <input type="radio" name="gender" />여성
         <input type="radio" name="gender" />남성
       </div>
