--- a/Team_Project/bus/login.html
+++ b/Team_Project/bus/login.html
@@ -22,10 +22,13 @@
       <input class="form" name="email" placeholder="이메일을 입력해주세요." />
       <input
         class="form"
-        type="password"
         name="password"
+        type="password"
         placeholder="비밀번호를 입력해 주세요."
       />
+      <div id="auto_login">
+        <input type="checkbox" /><span>자동로그인</span>
+      </div>
       <div class="divideLine"></div>
       <button class="login" id="login_button">로그인</button>
       <button class="login">Naver 로그인</button>
