--- a/Team_Project/bus/login.html
+++ b/Team_Project/bus/login.html
@@ -34,7 +34,7 @@
       <button class="login">Naver 로그인</button>
       <div class="login_etc">
         <a href="join.html">회원가입</a> |
-        <a href="">아이디/비번찾기</a>
+        <a href="findIdPw.html">아이디/비번찾기</a>
       </div>
     </div>
   </body>
