--- a/Team_Project/bus/findIdPw.html
+++ b/Team_Project/bus/findIdPw.html
@@ -14,6 +14,7 @@
       <div class="subTitle">ID 찾기</div>
 
       <input class="form" placeholder="이름을 입력해 주세요." />
+      <input class="form" placeholder="휴대폰 번호를 입력해 주세요." />
       <select class="area" id="area">
         <option value="">지역을 선택하세요</option>
         <option value="1">서울</option>
@@ -32,6 +33,7 @@
       <div class="subTitle">PASSWORD 찾기</div>
       <input class="form" placeholder="이메일을 입력해주세요." />
       <input class="form" placeholder="이름을 입력해주세요." />
+      <input class="form" placeholder="휴대폰 번호를 입력해 주세요." />
       <button type="button" class="find_button" id="find_button2">
         비밀번호 찾기
       </button>
