--- a/html_09_table/index.html
+++ b/html_09_table/index.html
@@ -63,7 +63,7 @@
     </style>
   </head>
   <body>
-    <table class="table1" border="1">
+    <table class="table1">
       <tr>
         <th>이름</th>
         <th>주소</th>
@@ -84,7 +84,7 @@
         <td>3</td>
       </tr>
     </table>
-    <table class="table2" border="1">
+    <table class="table2">
       <tr>
         <th>이름</th>
         <th>주소</th>
@@ -106,7 +106,7 @@
         <td>3</td>
       </tr>
     </table>
-    <table class="table3" border="1">
+    <table class="table3">
       <tr>
         <th>이름</th>
         <th>주소</th>
