--- a/Team_Project/bus/join.html
+++ b/Team_Project/bus/join.html
@@ -20,23 +20,24 @@
       <div class="signUpTitle">시외버스 회원가입</div>
 
       <input class="form" id="email" placeholder="이메일을 입력해주세요." />
-      <div class="error" id="error_email"></div>
+      <!-- <div class="error" id="error_email"></div> -->
       <input class="form" id="writer" placeholder="이름을 입력해 주세요." />
-      <div class="error" id="error_writer"></div>
+      <!-- <div class="error" id="error_writer"></div> -->
       <input
         class="form"
         id="pwd1"
         type="password"
         placeholder="비밀번호를 입력해 주세요."
       />
-      <div class="error" id="error_pwd1"></div>
+      <!-- <div class="error" id="error_pwd1"></div> -->
       <input
         class="form"
         id="pwd2"
         type="password"
         placeholder="비밀번호를 다시 입력해 주세요."
       />
-      <div class="error" id="error_pwd2"></div>
+      <!-- <div class="error" id="error_pwd2"></div> -->
+      <input class="form" id="phone" placeholder="휴대폰 번호를 입력하세요" />
 
       <select class="area" id="area">
         <option value="">지역을 선택하세요</option>
