--- a/Team_Project/bus/usuallyBus.html
+++ b/Team_Project/bus/usuallyBus.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>시외버스 - 즐겨찾기</title>
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/usuallyBus.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,8 +14,9 @@
       href="https://fonts.googleapis.com/css2?family=Dongle:wght@700&display=swap"
       rel="stylesheet"
     />
+    <script src="./js/usuallyBus.js"></script>
   </head>
-  <body>
+  <body class="slide-in">
     <div id="all">
       <div id="middle">
         <div id="top-title">
@@ -24,21 +26,35 @@
           </header>
         </div>
         <table>
-          <th>No.</th>
-          <th>출발지</th>
-          <th>목적지</th>
-          <th>선택</th>
           <tr>
+            <th>No.</th>
+            <th>출발지</th>
+            <th>목적지</th>
+            <th>선택</th>
+          </tr>
+          <tr class="table1">
             <td>1</td>
             <td>문화동 시외버스 정류장</td>
             <td>순창</td>
-            <td><input type="checkbox" name="" id="" /></td>
+            <td>
+              <input
+                type="checkbox"
+                name="check"
+                onclick="checkOnlyOne(this)"
+              />
+            </td>
           </tr>
-          <tr>
+          <tr class="table1">
             <td>2</td>
             <td>광주종합버스터미널(유스퀘어)</td>
             <td>서울</td>
-            <td><input type="checkbox" name="" id="" /></td>
+            <td>
+              <input
+                type="checkbox"
+                name="check"
+                onclick="checkOnlyOne(this)"
+              />
+            </td>
           </tr>
         </table>
         <button>빠른 조회</button>
