--- a/Team_Project/bus/index.html
+++ b/Team_Project/bus/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>시외버스</title>
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +15,7 @@
     />
     <script src="js/index.js" defer></script>
   </head>
-  <body>
+  <body class="slide-in">
     <div id="all">
       <div class="container">
         <div class="circle red" color="red"></div>
@@ -30,7 +31,7 @@
           </div>
           <section>
             <article>
-              <div class="select" onclick="location.href='';">
+              <div class="select" onclick="location.href='searchBus.html';">
                 <img
                   src="etc/Korea Map Transparent.PNG"
                   width="125px"
@@ -68,17 +69,11 @@
         <div class="line"></div>
         <div class="line"></div>
         <div id="light"></div>
-        <!-- <div id="full-bottom">
-        <input class="arrow" placeholder="출발지" />
-        <div>→</div>
-        <input class="arrow" placeholder="목적지" />
-        <button>조회</button>
-      </div> -->
       </div>
-    </div>
-    <div id="bottom">
-      <div id="front"></div>
-      <div id="back"></div>
+      <div id="bottom">
+        <div id="front"></div>
+        <div id="back"></div>
+      </div>
     </div>
   </body>
 </html>
