--- a/Team_Project/bus/serachArea.html
+++ b/Team_Project/bus/serachArea.html
@@ -30,7 +30,7 @@
           <label for="guSelect">구 선택</label>
           <select name="guSelect" id="gu">
             <option value="1">선택</option>
-            <option value="2">북구</option>
+            <!-- <option value="2">북구</option> -->
             <option value="3" selected>광산구</option>
             <!-- <option value="4">동구</option>
             <option value="4">서구</option>
