--- a/Team_Project/bus/searchBus.html
+++ b/Team_Project/bus/searchBus.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="css/searchBus.css" />
+    <script src="js/usuallyBus.js"></script>
     <script src="js/searchBus.js"></script>
     <title>노선 조회</title>
   </head>
