--- a/Team_Project/bus/usuallyBus.html
+++ b/Team_Project/bus/usuallyBus.html
@@ -57,7 +57,7 @@
             </td>
           </tr>
         </table>
-        <button>빠른 조회</button>
+        <button id="select_btn">빠른 조회</button>
       </div>
     </div>
   </body>
